# WeatherAPI

./: .gitignore  README.md  SECRETS.example.py  cli_create_user.py  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
api/: main.py
api/models/: database_models.py  enum_models.py  forecast_models.py  response_models.py  serverstats_models.py
api/routers/: authentication.py  forecast.py  permissions.py  sensors.py  serverstats.py  users.py  websocket.py
api/utils/: database.py  forecast_buffer.py  http_exceptions.py  permissions.py  security.py  sensor_utils.py  websocket_connection_handler.py
migrations/: env.py
migrations/versions/: 1c3b1303cd8a_initial_revision.py  f7dbd76237dd_add_sensor_state.py
models/: forecast_models.py  response_models.py
routers/: authentication.py  forecast.py  permissions.py  sensors.py  users.py
tests/: test_main.py
tests/router_tests/: test_authentication.py  test_forecast.py  test_permissions.py  test_sensors.py  test_serverstats.py  test_users.py  test_websocket.py
tests/utils/: assertions.py  authentication_tests.py  fake_db.py  fixtures.py  forecast_dump.py  sensor_base_tests.py  sensor_utils.py  serverstats_dump.py
tests/utils_tests/: test_forecast_buffer.py  test_security.py
utils/: forecast_buffer.py  permissions.py  security.py
