[project]
name = "WeatherAPI"
version = "0.0.1"
requires-python = "3.12"
dependencies = [
    "alembic==1.16.1",
    "alembic-postgresql-enum==1.7.0",
    "asyncpg==0.29.0",
    "bcrypt==4.0.1",
    "cryptography==42.0.4",
    "fastapi==0.109.2",
    "firebase-admin==6.8.0",
    "httpx~=0.27.0",
    "passlib==1.7.4",
    "pydantic~=2.7.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.25",
    "sqlmodel==0.0.14",
    "uvicorn==0.27.0",
    "websockets>=15.0.1",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
combine_star = true

[tool.coverage.run]
concurrency=["thread", "greenlet"]

[dependency-groups]
dev = [
    "aiosqlite==0.20.0",
    "black==24.3.0",
    "isort==5.13.2",
    "pytest==8.1.1",
    "pytest-asyncio==0.23.6",
    "pytest-cov==6.0.0",
    "pytest-httpx==0.30.0",
    "pytest-lazy-fixtures==1.0.7",
    "pytest-mock==3.14.0",
]
